# StudioLabOS

./: .gitignore  CONVENTIONS.md  README.md  SCHEMA.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.server.json  vite  vite.config.ts
docs/plans/: 2026-02-19-sqlite-migration.md  2026-02-20-web-migration.md
scripts/: selfhst-logo-aliases.json  sync-selfhst-logos.mjs
server/: db.ts  index.ts  schema.ts
server/routes/: aggregate.ts  crud.ts  io.ts  junction.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  db.rs  main.rs
src/lib/api/: client.ts  dataProvider.ts  provider.ts
src/lib/sqlite/: provider.ts
src/lib/types/: asset.ts  business.ts  dashboard.ts  ledger.ts  project.ts  quote.ts  subscription.ts  timeline.ts
src/lib/ui/: preferences.ts
src/pages/: ClientsPage.tsx  ContractsPage.tsx  DashboardPage.tsx  DigitalAssetsPage.tsx  LedgerPage.tsx  ProjectCenterPage.tsx  QuoteCenterPage.tsx  SettingsPage.tsx  SubscriptionPage.tsx  SuppliersPage.tsx  TimelinePage.tsx
src/services/: assetService.ts  billingDateCalculator.ts  businessService.ts  dashboardService.ts  ledgerService.ts  notificationService.ts  projectService.ts  quoteService.ts  subscriptionService.ts  timelineService.ts
src/stores/: useProjectStore.ts  useQuoteStore.ts  useSubscriptionStore.ts
src/styles/: tokens.css
